# insight

./: Cargo.toml  Justfile  README.md  podman-compose.yaml
src/: app.rs  helper.rs  layout.rs  main.rs  metrics.rs  models.rs  palette.rs  state.rs  utilities.rs
src/cards/: cpu.rs  memory.rs  mod.rs  processes.rs  storage.rs
src/components/: bar.rs  button.rs  card.rs  constant.rs  donut.rs  gradient.rs  graph.rs  heading.rs  inline.rs  mod.rs  scroll.rs  sidebar.rs  sidebar_button.rs  stacked.rs  styles.rs  svg.rs  title.rs  tooltip.rs  variable.rs
src/dashboard/: cpu.rs  memory.rs  mod.rs  processes.rs  processor.rs  swap.rs
src/pages/: cpu.rs  firmware.rs  hardware.rs  mod.rs  processor.rs  software.rs
src/sections/: cpu.rs  memory.rs  mod.rs  network.rs  processes.rs  storage.rs
src/sidebar/: button.rs  mod.rs
